--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,108 @@
-gunicorn
-flask
-python-telegram-bot
-Pillow
-
+absl-py==2.2.1
+anyio==4.9.0
+asttokens==3.0.0
+astunparse==1.6.3
+attrs==25.3.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+certifi==2025.1.31
+cffi==1.17.1
+chardet==3.0.4
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+debugpy==1.8.13
+decorator==5.2.1
+deep-translator==1.11.4
+executing==2.2.0
+Flask==3.1.0
+flatbuffers==25.2.10
+gast==0.6.0
+google-pasta==0.2.0
+googletrans==4.0.0rc1
+grpcio==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
+h2==3.2.0
+h5py==3.13.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==5.2.0
+idna==2.10
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keras==3.9.1
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+nest-asyncio==1.6.0
+numpy==2.0.0
+opt_einsum==3.4.0
+optree==0.14.1
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.2
+parso==0.8.4
+pillow==11.1.0
+platformdirs==4.3.7
+prompt_toolkit==3.0.50
+protobuf==5.29.4
+psutil==7.0.0
+pure_eval==0.2.3
+PyAudio==0.2.14
+pycparser==2.22
+Pygments==2.19.1
+PySocks==1.7.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-telegram-bot==22.0
+pytz==2025.2
+pywin32==310
+pyzmq==26.3.0
+requests==2.32.3
+rfc3986==1.5.0
+rich==14.0.0
+scikit-learn==1.6.1
+scipy==1.15.2
+selenium==4.30.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SpeechRecognition==3.14.2
+stack-data==0.6.3
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow-io-gcs-filesystem==0.31.0
+tensorflow_intel==2.18.0
+termcolor==2.5.0
+threadpoolctl==3.6.0
+tk==0.1.0
+tornado==6.4.2
+traitlets==5.14.3
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.13.0
+tzdata==2025.2
+urllib3==2.3.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wrapt==1.17.2
+wsproto==1.2.0
